Name:                   sdl2-examples
Version:                0.0.0.1
Author:                 Yun-Yan Chi, Chia-Chi Tsai
Maintainer:             jaiyalas@gmail.com, rueshyna@gmail.com
Cabal-Version:          >= 1.12
Build-Type:             Simple
--
executable main
   default-language: Haskell2010
   hs-source-dirs:   src
   main-is:          Demo.hs
   build-depends: base             >= 4 && < 5
                , sdl2             >= 2.0
                , linear
                , text
                , transformers
                , AC-Boolean
                , pixel-pen
   ghc-options: -O2 -w -main-is Demo
